# collabvm-1.2.ts

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  Justfile  README.md  config.example.toml  package.json  tsconfig.json  vm.example.toml
.github/workflows/: format.yml
cvm-rs/: Cargo.toml  index.d.ts  index.js  package.json  require.js  rustfmt.toml  vnc.js  vnc_test.js
cvm-rs/src/: guac.rs  guac_js.rs  jpeg_compressor.rs  jpeg_js.rs  lib.rs  util.rs
cvm-rs/src/vnc/: client.rs  js.rs  mod.rs  surface.rs  types.rs
cvmts/: package.json  tsconfig.json
cvmts/src/: AuditLog.ts  AuthManager.ts  BanManager.ts  BinRectsProtocol.ts  CollabVMNode.ts  CollabVMServer.ts  Database.ts  GeoIPDownloader.ts  GuacamoleProtocol.ts  IConfig.ts  IPData.ts  JPEGEncoder.ts  JPEGEncoderWorker.ts  NetworkClient.ts  NetworkServer.ts  Protocol.ts  RateLimiter.ts  ThumbnailJPEGEncoderWorker.ts  TurnController.ts  User.ts  Utilities.ts  VM.ts  VMDisplay.ts  Vote.ts  WSServer.ts  index.ts
cvmts/src/TCP/: TCPClient.ts  TCPServer.ts
cvmts/src/VNCVM/: VNCVM.ts  VNCVMDef.ts
cvmts/src/WebSocket/: WSClient.ts  WSServer.ts
cvmts/src/display/: batch.ts  hazelnut.ts  hazelnut_client.ts  interface.ts  vnc.ts
cvmts/src/meta/: metaApi.ts
cvmts/src/net/: NetworkClient.ts  NetworkServer.ts
cvmts/src/net/tcp/: TCPClient.ts  TCPServer.ts
cvmts/src/net/ws/: WSClient.ts  WSServer.ts
cvmts/src/protocol/: BinRectsProtocol.ts  BinaryProtocol.ts  GuacamoleProtocol.ts  Manager.ts  Protocol.ts
cvmts/src/util/: cgroup.ts  stopwatch.ts  timer.ts
cvmts/src/vm/: interface.ts  qemu.ts  qemu_launcher.ts
cvmts/src/vm/vnc/: VNCVM.ts  VNCVMDef.ts
guac-rs/: Cargo.toml  index.d.ts  index.js  package.json
guac-rs/src/: lib.rs
jpegturbo-rs/: Cargo.toml  index.d.ts  index.js  package.json
jpegturbo-rs/src/: lib.rs
meta-server/: README.md  config.example.toml  media.example.toml  package.json
meta-server/src/: IConfig.ts  index.ts  module.ts
meta-server/src/iaos/: iaos.ts
qemu/: package.json
qemu/src/: QemuDisplay.ts  QemuUtil.ts  QemuVM.ts  QmpClient.ts  index.ts
shared/: package.json
shared/src/: Logger.ts  index.ts
src/: AuthManager.ts  Framebuffer.ts  IConfig.ts  IPData.ts  QEMUVM.ts  QMPClient.ts  RateLimiter.ts  RectBatcher.ts  User.ts  Utilities.ts  VM.ts  VNCVM.ts  WSServer.ts  hcaptcha.ts  index.ts  log.ts
