[package]
name = "cvm-rs"
description = "Rust utility library for cvmts. Runs performance-sensitive code."
version = "0.3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.155"
anyhow = "1.0.86"
once_cell = "1.19.0"

# async/threading stuff
tokio = { version = "1.40.0", features = ["full"] }
rayon = "1.10.0"
futures = "0.3.30"

# node bindings
neon = "1"

# JPEG
turbojpeg-sys = "1.0.0"

# vnc
vnc-rs = { git = "https://github.com/computernewb/vnc-rs.git" }

# vnc thumbnails
resize = "0.8.7"
rgb = "0.8.50"

# Tracing
tracing = "0.1.40"
tracing_sprout = "0.1.0-alpha.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "chrono"] }

[profile.release]
opt-level = 3
strip = true
# TODO: turbojpeg-sys currently doesn't use clang I don't think,
# or LTO for that matter. Not that it matters because cross-LTO
# between Clang -> Rust is a bit... messy atm. Oh well!
lto = "thin"
