[package]
name = "cvm-rs"
description = "Rust utility library for cvmts. Runs all the high performance code"
version = "0.2.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.155"

# Required for JPEG
once_cell = "1.19.0"
turbojpeg-sys = "1.1.1"
rayon = "1.10.0"

# node sex
napi =  { version = "2.16.9", features = [ "async", "napi8", "error_anyhow" ] }
napi-derive = "2.16.11"
anyhow = "1.0.86"
resize = "0.8.8"
rgb = "0.8.50"

[build-dependencies]
napi-build = "2.1.3"
